[package]
name = "grid-weights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grid_weights"
crate-type = ["cdylib"]

[dependencies]
geo = { version = "0.29.3", features = ["multithreading", "use-serde"] }
geoarrow = "0.4.0-beta.2"
numpy = "0.23.0"
pyo3 = "0.23.1"
pyo3-arrow = "0.6.0"
