[package]
name = "grid-weights"
version = "0.1.0"
edition = "2021"

[lib]
name = "grid_weights"
crate-type = ["cdylib"]

[dependencies]
geo = { version = "0.29.3", features = ["multithreading", "use-serde", "serde", "use-proj"] }
geoarrow = "0.4.0-beta.3"
numpy = "0.23.0"
pyo3 = { version = "=0.23.3", features = ["serde"] }
pyo3-arrow = "0.6.0"
