[package]
name = "grid-weights"
version = "0.2.0"
edition = "2021"

[lib]
name = "grid_weights"
crate-type = ["cdylib"]

[dependencies]
geo = { version = "0.29", features = [
  "multithreading",
  "use-serde",
  "serde",
  "use-proj",
] }
geoarrow = "0.4.0-beta.4"
numpy = "0.24"
pyo3 = { version = "0.24", features = ["serde"] }
pyo3-arrow = "0.8"
