[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "grid-weights"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
  "sparse",
  "geoarrow-rust-core>=0.4.0b3",
  "grid-indexing",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
